maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:37: error: missing arguments for method getIndication in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
		if ((getIndication==9999 && y!=Ymax && getIndication(x,y+1)==i-1 && aMurNord(x,y+1)==false) || (getIndication==9999 && y!=0 && getIndication(x,y-1)==i-1 && aMurNord(x,y)==false) || (getIndication==9999 && x!=Xmax && getIndication(x+1,y)==i-1 && aMurOuest(x+1,y)==false ) || (getIndication==9999 && x!=0 && getIndication(x-1,y)==i-1 && aMurOuest(x,y)==false)) {
                     ^